# asc

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROMPT-NEXT-PUSH.md  PROMPT.md  README.md
lib/AST/: ASTContext.cpp  CMakeLists.txt  Type.cpp
lib/Analysis/: AliasCheck.cpp  CMakeLists.txt  DropInsertion.cpp  EscapeAnalysis.cpp  FreeVars.cpp  LinearityCheck.cpp  LivenessAnalysis.cpp  MoveCheck.cpp  PanicScopeWrap.cpp  RegionInference.cpp  SendSyncCheck.cpp  StackSizeAnalysis.cpp
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  SourceManager.cpp  TokenKinds.cpp
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  ConcurrencyLowering.cpp  OwnershipLowering.cpp  PanicLowering.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp
lib/HIR/: CMakeLists.txt  HIRBuilder.cpp  OwnDialect.cpp  OwnDialect.td  OwnOps.cpp  OwnOps.td  OwnTypes.cpp  TaskDialect.cpp  TaskDialect.td  TaskOps.cpp  TaskOps.td
lib/Lex/: CMakeLists.txt  Lexer.cpp
lib/Parse/: CMakeLists.txt  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp
lib/Runtime/: CMakeLists.txt  arc_rt.c  atomics.c  channel_rt.c  hashmap_rt.c  rc_rt.c  runtime.c  string_rt.c  sync_rt.c  vec_rt.c  wasi_clock.c  wasi_env.c  wasi_fs.c  wasi_io.c  wasi_random.c  wasi_thread_rt.c
lib/Sema/: Builtins.cpp  CMakeLists.txt  Sema.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaType.cpp
rfcs/: RFC-0001-project-overview.md  RFC-0002-surface-syntax.md  RFC-0003-compiler-pipeline.md  RFC-0004-target-support.md  RFC-0005-ownership-borrow-model.md  RFC-0006-borrow-checker.md  RFC-0007-concurrency-model.md  RFC-0008-memory-model.md  RFC-0009-panic-and-unwind.md  RFC-0010-toolchain-and-dx.md  RFC-0011-std-core-traits.md  RFC-0012-std-memory-module.md  RFC-0013-std-collections-string.md  RFC-0014-std-concurrency-io.md  RFC-0015-complete-syntax.md  RFC-0016-json.md  RFC-0017-std-collections.md  RFC-0018-std-encoding-crypto.md  RFC-0019-std-path-config.md  RFC-0020-std-async.md
rfcs/decisions/: 001-no-binaryen.md  002-no-gc.md  003-004-mlir-hir-and-ts-syntax.md  005-006-push-move-and-rc-placement.md
std/: README.md  prelude.ts  result.ts  string.ts  vec.ts
std/async/: deadline.ts  debounce.ts  mux.ts  pool.ts  retry.ts  semaphore.ts  throttle.ts  ticker.ts
std/collections/: btreemap.ts  btreeset.ts  grouping.ts  hashmap.ts  hashset.ts  heap.ts  linked_list.ts  utils.ts  vecdeque.ts
std/config/: ini.ts  toml.ts  yaml.ts
std/core/: cmp.ts  convert.ts  fmt.ts  hash.ts  iter.ts  ops.ts  option.ts  traits.ts
std/crypto/: argon2.ts  hmac.ts  password.ts  random.ts  sha256.ts  sha3.ts  sha384.ts  sha512.ts  subtle.ts
std/encoding/: base64.ts  hex.ts  percent.ts  utf16.ts  varint.ts
std/env/: dotenv.ts  env.ts
std/fs/: dir.ts  file.ts  ops.ts  path.ts
std/io/: buf.ts  error.ts  stdio.ts  traits.ts
std/json/: parser.ts  serde.ts  serializer.ts  slice.ts  value.ts
std/mem/: arc.ts  arena.ts  box.ts  cell.ts  manually_drop.ts  ptr.ts  rc.ts
std/path/: posix.ts  windows.ts
std/sync/: atomic.ts  barrier.ts  condvar.ts  lazy.ts  mutex.ts  once.ts  rwlock.ts
std/thread/: channel.ts  thread.ts
test/: lit.cfg.py
test/CodeGen/: wasm_threads_decls.ts
test/Lex/: basic_tokens.ts
test/Parse/: function_decl.ts  struct_enum.ts
test/Sema/: task_spawn_closure_else_capture.ts  task_spawn_closure_inner_let.ts  task_spawn_closure_non_send.ts  task_spawn_closure_primitive.ts  task_spawn_closure_return_expr.ts  task_spawn_closure_trailing_expr.ts  type_check.ts
test/e2e/: abs_value.ts  aggregate_move.ts  arc_basic.ts  arena_alloc.ts  arithmetic.ts  array_index.ts  array_sort_verify.ts  assert_macro.ts  borrow_e002_e003.ts  borrow_error.ts  borrow_error_E001.ts  box_new.ts  break_continue.ts  break_value.ts  catch_unwind.ts  channel_drop.ts  channel_roundtrip.ts  clone_eq.ts  closure_basic.ts  closure_capture.ts  collatz.ts  combined_features.ts  combined_loops.ts  comprehensive.ts  concurrency.ts  conditional_drop.ts  conditional_ownership.ts  const_fold.ts  copy_deep.ts  copy_in_loop.ts  copy_struct_assign.ts  copy_struct_byval.ts  copy_type.ts  custom_drop.ts  debug_info.ts  deep_calls.ts  deref_trait.ts  derive_clone.ts  derive_clone_aliasing.ts  derive_default.ts  (+183 more)
test/std/: test_argon2.ts  (+69 more)
unittests/: CMakeLists.txt
(+98 files in other folders)
