add_library(ascAnalysis
  LivenessAnalysis.cpp
  RegionInference.cpp
  AliasCheck.cpp
  MoveCheck.cpp
  LinearityCheck.cpp
  SendSyncCheck.cpp
  EscapeAnalysis.cpp
  FreeVars.cpp
  DropInsertion.cpp
  PanicScopeWrap.cpp
  StackSizeAnalysis.cpp
)

target_link_libraries(ascAnalysis
  PUBLIC
  ascHIR
  ascBasic
  MLIRIR
  MLIRAnalysis
  MLIRPass
)
